# hermes-body

./: .env.example  .gitignore  PLAN.md  README.md  index.html  mise.toml  pyproject.toml  style.css
reports/: 2026-05-03-hermes-body-reachy-mini-frontend.md  2026-05-04-reachy-mini-llm-brains.md  2026-05-04-reachy-mini-megan-deep-dive.md
src/hermes_body/: __init__.py  config.py  gradio_app.py  hermes_bridge.py  main.py  moves.py  openai_realtime.py  prompts.py
src/hermes_body/audio/: __init__.py  filler.py
src/hermes_body/tools/: __init__.py  core_tools.py
src/hermes_body/vision/: __init__.py  mediapipe_tracker.py
systemd/: hermes-body-autostart.service
