[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-body"
version = "0.1.0"
description = "Reachy Mini front end for Nous Research's hermes-agent"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
  "reachy-mini>=1.7.0",
  "openai>=1.50.0",
  "fastrtc>=0.0.17",
  "numpy",
  "scipy",
  "python-dotenv",
  "httpx>=0.27",
  "websockets>=12.0",
  "opencv-python-headless",
  "gradio>=4.0",
  "mediapipe>=0.10.14",
]

[project.optional-dependencies]
yolo_vision = [
  "opencv-python",
  "ultralytics",
  "supervision",
  "huggingface_hub",
]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

[project.scripts]
hermes-body = "hermes_body.main:main"

[project.entry-points."reachy_mini_apps"]
hermes-body = "hermes_body.main:HermesBody"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
